*** HYBRID CHANGELOG
*** Newest entries at top

version hybrid-6-b85 21-Jun-1999
* worked on serial number some more..
* fixed a few compile warnings related to the s_serv.c split
-Rodder
* Massive changes to conf formatting, preformatted user@host entries
* fixed Q lines to allow multiple user@host separated by ,
* removed obsolete resolver code
* removed obsolete options in config.h
* split s_serv.c into several smaller pieces
-Dianora

version hybrid-6-b84 14-Jun-1999
* removed more dead code for now (R lines)
* redid Q lines to allow user@host exceptions
-Dianora
	
version hybrid-6-b83 12-Jun-1999
* removed TIMED_KLINES entirely
* fixed stupid in s_conf.c
-Dianora
* Don't send 479 errors for SJOIN to bogus channel
-Rodder

version hybrid-6-b82 12-Jun-1999
* added more rudimentary block allocator debugging	
-Rodder

-Dianora	
version hybrid-6-b81
* only show hacked ops if from this server to an opless channel
* added PACE_WALLOPS wallops is not a substitute for a channel
-Dianora

version hybrid-6-b80
* fixed "cannot join" numerics to display full error messages
* fixed ERR_BANLISTFULL to include channel name and banid
* reject non-RFC channel names from clients and servers instead
  of truncating (new numeric 479 coordinated with the other major nets)
-Rodder

version hybrid-6-b79
* fixed compile problems if SPLIT_PONG was undefined
* more cleanup
* moved TIMED_K's to broken section of conf
-Rodder

version hybrid-6-b78   2-Jun-1999
* renamed mycmp() to irccmp() and myncmp() to ircncmp()
-Rodder

version hybrid-6-b77   2-Jun-1999
* more minor cleanup
-Rodder
* duh. just realized that hostip is now obsolete because of the way
  IP klines are being done. removing it saves 15 bytes per local client.
-Dianora

version hybrid-6-b76   28-May-1999
* make sure mtrie returned aconf is a CONF_KILL in s_serv.c
* take care of ~*@some.host.at.tld case
-Dianora

version hybrid-6-b75   26-May-1999
* '*' is not a legal IP. corrected is_address code.